--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "gooey",
   "version": "0.0.1",
   "dependencies": {
+    "breakpoint-sass": "^2.7.0",
+    "gsap": "^1.19.0",
     "jquery": "~2.2.0",
     "normalize.css": "~3.0.3"
   },
@@ -47,7 +49,7 @@
     "gulp-newer": "~1.1.0",
     "js-yaml": "~3.5.2",
     "watchify": "~3.7.0 ",
-    "browserify" : "~13.0.1"
+    "browserify": "~13.0.1"
   },
   "scripts": {
     "clean-deps": "rimraf node_modules"
@@ -57,13 +59,10 @@
   },
   "//": "CUSTOM CONFIGURATION",
   "config": {
-    "//": "Local Server Settings",
+    "//": "Entry files",
     "host": "127.0.0.1",
     "port": "3000",
     "baseUrl": "./",
-    "//": "Gulp Task Directories",
-    "//": "NOTE: folders prefixed with an underscore (_) will have it removed when moved to build target (ex: src/_images -> build/images)",
-    "//": "NOTE: folders NOT prefixed with underscore (_) will be copied to build target 1 to 1 (ex: src/fonts -> build/fonts)",
     "directories": {
       "source": "src",
       "destination": "build",
@@ -76,7 +75,6 @@
       "scripts": "_scripts",
       "data": "_data"
     },
-    "//": "Entry files",
     "entries": {
       "js": "main**.js",
       "css": "main**.{sass,scss}"
